--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -57,3 +57,23 @@ body, html {
 .linear-bg-gradient-subscription {
     background: linear-gradient(180deg, #191E2D 0%, rgba(25, 30, 45, 0) 100%);
 }
+
+/* Change Autocomplete styles in Chrome*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid "#38405B";
+  -webkit-text-fill-color: white;
+  -webkit-box-shadow: none;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+checkbox-custom {
+    user-select: none;
+}
