--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -163,3 +163,18 @@ select:-webkit-autofill:focus {
   transition: all;
   transition-duration: 0.2s;
 }
+
+@layer utilities {
+    @variants responsive {
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+
+      /* Hide scrollbar for IE, Edge and Firefox */
+      .no-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+      }
+    }
+  }
