--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -187,3 +187,11 @@ select:-webkit-autofill:focus {
   width: 8px;
   background: #71717a;
 }
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+
+}
