--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -195,3 +195,18 @@ select:-webkit-autofill:focus {
   overflow: hidden;
 
 }
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin	{
+  animation: spin 1s linear infinite;
+  
+}
+
